<resources>
    <string name="app_name">GoryITy</string>
    <string name="choose_points">Wybierz punkty:</string>
    <string name="find_point">Wyszukaj punkt...</string>
    <string name="find_mountain_range">Filtruj po pasmach...</string>
    <string name="filter">Filtruj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stretch_creation">Tworzenie odcinka</string>
    <string name="start_point">Punkt początkowy:</string>
    <string name="click_to_add_point">Kliknij by dodać punkt</string>
    <string name="end_point">Punkt końcowy:</string>
    <string name="summary">Podsumowanie:</string>
    <string name="stretch_length">Dlugość odcinka:</string>
    <string name="elevation">Przewyższenie:</string>
    <string name="points">Punkty:</string>
    <string name="create_stretch">Stwórz odcinek</string>
    <string name="questionmark">\?</string>
    <string name="meters">%1$.2fm</string>
    <string name="create_point">stwórz punkt</string>
    <string name="submitter">Składający</string>
    <string name="points2">Punkty</string>
    <string name="tourists_application">Wniosek turysty: %1$s</string>
    <string name="application_time">Czas złożenia wniosku:</string>
    <string name="trail">Trasa:</string>
    <string name="show_trail">Pokaż trasę</string>
    <string name="start_time">Czas rozp. wycieczki:</string>
    <string name="end_time">Czas zak. wycieczki:</string>
    <string name="total_time">Czas trwania wycieczki:</string>
    <string name="attachment">Załącznik:</string>
    <string name="accept">Zaakceptuj</string>
    <string name="decline">odrzuć</string>
    <string name="applications">Wnioski do rozpatrzenia:</string>
    <string name="no_new_applications">Brak nowych wniosków do rozpatrzenia!</string>
    <string name="decline_reason">Podaj powód odrzucenia wniosku</string>
    <string name="your_comment">Twój komentarz:</string>
    <string name="decline_reason_hint">Odrzucam wniosek, ponieważ...</string>
    <string name="char_counter">%1$d/255</string>
    <string name="send">wyślij</string>
    <string name="time_format">%1$d godz. %2$d min.</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="applications_trip_menu">Wnioski o akceptację</string>
    <string name="applications_menu">Wnioski</string>
    <string name="creator_menu">Kreator</string>
    <string name="stretch_menu">Odcinek</string>
    <string name="app_name_header">GIT - Góry I Ty</string>
</resources>